project-changgou-shenzhen-cmm-vue-master/k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: itheima-admin
  labels:  
      name: itheima-admin
