project-changgou-shenzhen-cmm-vue-master/k8s/5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
  namespace: itheima-admin
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  selector:
    app: web
